add speed, reset, color-mobile buttons, refactor variables

--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@ button:focus {
 	outline: none;
 }
 
+.web-button{
+	border-radius: 50px;
+	background-color: white;
+	border-style: outset;
+	border-color: rgba(0,0,0,0.1);
+}
+
+.selected-button{
+	background-color: rgba(210, 210, 210, 1);
+	color: white;
+}
+
 #menu {
 	display: none;
 	position: absolute;
@@ -32,8 +44,13 @@ button:focus {
 	padding: 5px;
 	background-color: white;
 	border-radius: 50px;
-	border-style: none;
+	border-style: outset;
+	border-color: rgba(0,0,0,0.1);
 	font-size: 1em;
+}
+
+.color-mobile{
+	display: none;
 }
 
 #rgb {
@@ -79,8 +96,16 @@ button:focus {
 		padding: 42px;
 		background-color: rgba(210, 210, 210, 1);
 		border-radius: 50px;
-		border-style: none;
+		border-style: outset;
 		font-size: 2em;
+	}
+
+	.plus-button {
+		margin-left: 0px;
+	}
+
+	#get-rgb {
+		color: white;
 	}
 
 	#rgb {
@@ -97,7 +122,14 @@ button:focus {
 		margin: 0px auto;
 	}
 
-	.slider {
+	input[type=range] {
 		display: none;
+	}
+
+	.color-mobile {
+		display: inline;
+		padding: 0px 50px;
+		font-size: 3em;
+		color: black;
 	}
 }
